--- a/.github/workflows/main_gymmanagementwebsite.yml
+++ b/.github/workflows/main_gymmanagementwebsite.yml
@@ -50,27 +50,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E8101C5418D54B3A85C946E681260861 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0F0CB843D6214A228BD6F587E35FDEA5 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_BDD2E28A5E9D4A4BB022FD95ABEF3731 }}
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'gymmanagementwebsite'
           slot-name: 'Production'
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4CC36EB8C2B848A592B572E1289BFDE4 }}
